tests/snapshots/integration__integration_tests__switch__switch_no_hooks_skips_post_start.snap
---
source: tests/integration_tests/switch.rs
info:
  program: wt
  args:
    - switch
    - "--create"
    - no-post-start
    - "--no-hooks"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    HOME: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpYcrfhx
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpmcitcx/test-config.toml
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
[1m[31merror:[0m unexpected argument '[33m--no-hooks[0m' found

  [32mtip:[0m to pass '[33m--no-hooks[0m' as a value, use '[32m-- --no-hooks[0m'

[1m[4mUsage:[0m [1mwt switch[0m [1m--create[0m <BRANCH>

For more information, try '[1m--help[0m'.
